--- a/css/main.css
+++ b/css/main.css
@@ -302,7 +302,7 @@ p{margin:0 0 2em;}
 .btn-download-alt:hover,.btn-download-alt:focus,.btn-download-alt:active{background:#555;}
 .btn-download-alt:active{background:#3f3f3f;}
 .star,.icon-star{color:#e08524;}
-.thumbnail{float:right;display:inline-block;padding:4px;line-height:1;border:1px solid #DDD;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);max-width:100%;margin:0 10px 10px 0;}
+.thumbnail{float:right;display:inline-block;padding:4px;line-height:1;border:1px solid #DDD;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);max-width:100%;margin:0 0 10px 10px;}
 .person-thumbnail{float:none;margin:0;}
 .ref-thumbnail{float:left;max-width:340px;}
 .ref-full-thumbnail{max-width:700px;}
