--- a/less/_components.less
+++ b/less/_components.less
@@ -117,7 +117,7 @@
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   max-width: 100%;
-  margin: 0 10px 10px 0;
+  margin: 0 0 10px 10px;
 }
 
 .person-thumbnail {
